<resources>
    <string name="app_name">Grayscale+</string>
    <string name="guide_website">https://github.com/BerenLuth/Greyscale/blob/master/user_guides/en_guide.md</string>
    <string name="tips_title">Need Permission!</string>
    <string name="tips_ok">OK</string>
    <string name="tips_copy">COPY</string>
    <string name="copy_done">Copy Success</string>
    <string name="tips">Before using this application, you have to grant permission with adb tools, copy the command below and execute it on PC:\n\n%1$s\n\nAlternatively you can use root to grant permission.</string>
    <string name="root_failure">root permission not granted</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="off" translatable="false">OFF</string>
    <string name="on" translatable="false">ON</string>
    <string name="title_default">Default</string>
    <string name="off_description">Normal display mode\nUse quick toggle to temporarily enable grayscale mode</string>
    <string name="on_description">Grayscale display mode\nUse quick toggle to temporarily enable normal mode</string>
    <string name="toggle_duration">Quick toggle timer: %1$d %2$s</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="toggle_explanation">By pressing the toggle in your notification panel, you\'ll enable/disable the grayscale mode by the selected amount of time</string>
    <string name="app_info">Application made by Fabio Rosada, artwork by Natalia Petliak.\n\nYou can find the source code on GitHub https://github.com/BerenLuth/Greyscale\n\nThis app is a fork of Greyscale app made by Fei-ke, you can find the code here https://github.com/fei-ke/Greyscale</string>
    <string name="save">Save</string>
    <string name="preferences_saved">Preferences saved</string>
    <string name="quik_toggles_help">Quick toggle switches are placed at the top of the notification panel. Usually there\'s a button to edit them, you can use it to add and find the grayscale toggle</string>
    <string name="stop">Stop now</string>
    <string name="timer_auto_stopped">Timer automatically stopped</string>
    <string name="timer_is_running">A timer is running until %1$s</string>
    <string name="timer_activated">Timer set for %1$d %2$s</string>
    <string name="timer_deleted">Timer deleted</string>
    <string name="need_help">Need help?</string>
    <string name="user_guide">User guide</string>
    <string name="night_mode">Auto Switch</string>
    <string name="night_mode_explanation">You can select a time window to turn grayscale on automatically (if the default mode is OFF).</string>
    <string name="night_mode_nopermission">This function will not work until you grant the permission to activate grayscale.</string>
    <string name="share_button_description">Share this app with friends</string>
    <string name="share_app_text">Grayscale+ allows you to put a gray-scale filter on your phone, download it from https://play.google.com/store/apps/details?id=com.berenluth.grayscale</string>
    <string name="choose_one">Send to…</string>
    <string name="activate_between">Activate between</string>
    <string name="activate_until">and</string>
    <string name="share_button_text">Share</string>
    <string name="donate_button_text">Donate</string>
    <string name="donate_button_description">Donate</string>
    <string name="donate_link">https://bit.ly/grayscaledonate</string>
    <string name="night_mode_running">Auto Switch is active right now</string>
    <string name="edit">edit</string>
    <string name="theme">Theme</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="theme_system_default">System default</string>
    <string name="theme_set_by_battery">Set by battery saver (it may not work on old Android versions)</string>
</resources>
