<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:paddingTop="20dp">

    <ImageButton
        android:id="@+id/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:background="?selectableItemBackgroundBorderless"
        android:padding="16dp"/>

    <ImageView
        android:id="@+id/info_img"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_info_outline_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/info_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/info_img"
        android:text="@string/app_info"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/info_description">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <TextView
                android:id="@+id/text_toggle_duration"
                android:textSize="@dimen/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toggle_duration"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/text_toggle_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toggle_explanation"
                app:layout_constraintTop_toBottomOf="@id/text_toggle_duration"
                android:textSize="@dimen/text_small"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <SeekBar
                android:id="@+id/seekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:max="5"
                android:progress="1"
                app:layout_constraintTop_toBottomOf="@id/text_toggle_explanation"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/seekBar"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/save"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>