<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_settings_black_24dp"
        android:background="?selectableItemBackgroundBorderless"/>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/appname"
        app:layout_constraintBottom_toTopOf="@id/text_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <ImageView
        android:id="@+id/icon_colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_colors"
        app:layout_constraintStart_toStartOf="@id/icon"
        app:layout_constraintTop_toTopOf="@id/icon"
        />

    <TextView
        android:id="@+id/appname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/text_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/icon"
        app:layout_constraintBottom_toTopOf="@id/text_container"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/text_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/icon"
        app:layout_constraintBottom_toTopOf="@id/main_switch"
        android:weightSum="2"
        app:layout_constraintVertical_chainStyle="packed"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off"
                android:textSize="@dimen/text_title"
                android:gravity="center"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off_description"
                android:gravity="start"
                android:textSize="@dimen/text_medium"
                android:padding="16dp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on"
                android:textSize="@dimen/text_title"
                android:gravity="center"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_description"
                android:gravity="end"
                android:textSize="@dimen/text_medium"
                android:padding="16dp"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_title"
        android:text="@string/title_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_switch"/>

    <TextView
        android:id="@+id/switch_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/off"
        android:textSize="@dimen/text_big"
        app:layout_constraintTop_toBottomOf="@id/text_container"
        app:layout_constraintBottom_toTopOf="@id/cute_drawing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/main_switch"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <Switch
        android:id="@+id/main_switch"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:switchMinWidth="40dp"
        android:translationX="-15dp"
        app:layout_constraintStart_toEndOf="@id/switch_off"
        app:layout_constraintEnd_toStartOf="@id/switch_on"
        app:layout_constraintTop_toBottomOf="@id/text_container"
        app:layout_constraintBottom_toTopOf="@id/cute_drawing"/>

    <TextView
        android:id="@+id/switch_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on"
        android:textSize="@dimen/text_big"
        app:layout_constraintTop_toBottomOf="@id/text_container"
        app:layout_constraintBottom_toTopOf="@id/cute_drawing"
        app:layout_constraintStart_toEndOf="@id/main_switch"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/cute_drawing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/transparent"
        android:scaleType="fitXY"
        android:visibility="visible"
        android:adjustViewBounds="true"
        />


</androidx.constraintlayout.widget.ConstraintLayout>